syntax = "proto3";

package tukki.storage.segments.v1;

option go_package = "github.com/jukeks/tukki/db/segments";

message Segment {
    uint64 id = 1;
    string filename = 2;
}

message SegmentAdded {
    Segment segment = 1;
}

message SegmentRemoved {
    Segment segment = 1;
}

message SegmentJournalEntry {
    oneof entry {
        SegmentAdded added = 1;
        SegmentRemoved removed = 2;
    }
}